# logging

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: core.h.4264ABC97F6DAD24.idx  log.cpp.97D54A84767C3E5F.idx  log.h.BDCEF09D0A80889D.idx  logger.cpp.7364002163743CDE.idx  logger.h.48EE0935DE3E6CE5.idx  pch.h.93B4089AD8109575.idx
include/: core.h  log.h  logger.h  pch.h
src/: log.cpp  logger.cpp
test/: test_main.cpp
